Fixed overlap
in photographs page

--- a/photographs.css
+++ b/photographs.css
@@ -1,4 +1,6 @@
 body {
+  width: 100%;
+  height: 100%;
   font-family: "Calibri";
   background-color: white;
   color: #6b6b6b;
@@ -18,6 +20,7 @@ nav {
   top: 11%;
   right: 43%;
   width: 100%;
+  margin-right: 10px;
 }
 
 nav li {
